jquery ui: fix z-index

--- a/html/jquery/css/jquery-plugins.css
+++ b/html/jquery/css/jquery-plugins.css
@@ -39,7 +39,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 20000;
+	z-index: 2200;
 	zoom: 1;
 }
 
@@ -52,7 +52,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
-	z-index: 20001;
+	z-index: 2201;
 }
 
 .ui-loadmask-load {
@@ -432,7 +432,7 @@
 	margin: 0;
 	padding: 0;
 	letter-spacing: normal;
-	z-index: 30000 !important;
+	z-index: 2300 !important;
 }
 
 .ui-toast-single {
