--- a/html/jquery/css/jquery.ui.loadmask.css
+++ b/html/jquery/css/jquery.ui.loadmask.css
@@ -6,7 +6,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 20000;
+	z-index: 2200;
 	zoom: 1;
 }
 
@@ -19,7 +19,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
-	z-index: 20001;
+	z-index: 2201;
 }
 
 .ui-loadmask-load {
