--- a/html/jquery/css/jquery.ui.toast.css
+++ b/html/jquery/css/jquery.ui.toast.css
@@ -9,7 +9,7 @@
 	margin: 0;
 	padding: 0;
 	letter-spacing: normal;
-	z-index: 30000 !important;
+	z-index: 2300 !important;
 }
 
 .ui-toast-single {
